Fixed WaveOut, DirectSoundOut and Wasapi for extremely heavy multithreading Fixed ntdll.dll crash because of heap corruption while using directsound Added ID3v1 encoding Refactoring Several bugfixes

--- a/CSCore.Test/CSCore.Test.csproj
+++ b/CSCore.Test/CSCore.Test.csproj
@@ -197,6 +197,7 @@
     <Compile Include="CoreAudioAPI\EndpointTests.cs" />
     <Compile Include="CoreAudioAPI\MMDevicesTests.cs" />
     <Compile Include="MediaFoundation\BasicMediaFoundationTests.cs" />
+    <Compile Include="ACM\AcmDriverTests.cs" />
     <Compile Include="Utils\BitReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DirectSound\DirectSoundTests.cs" />
