--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Codecs\MP3\XingHeaderFlags.cs" />
     <Compile Include="Codecs\WMA\WMADecoder.cs" />
     <Compile Include="CoreAudioAPI\AudioCaptureClient.cs" />
+    <Compile Include="CoreAudioAPI\AudioClientStreamFlags.cs" />
     <Compile Include="CoreAudioAPI\AudioMeterInformation.cs" />
     <Compile Include="CoreAudioAPI\DefaultDeviceChangedEventArgs.cs" />
     <Compile Include="CoreAudioAPI\DeviceNotificationEventArgs.cs" />
@@ -242,27 +243,34 @@
     <Compile Include="DMO\MP3DecMediaObject.cs" />
     <Compile Include="DSP\BiQuad.cs" />
     <Compile Include="DSP\ChannelMatrixElement.cs" />
+    <Compile Include="IWritable.cs" />
     <Compile Include="MediaFoundation\CommonAudioDecoderGuids.cs" />
     <Compile Include="MediaFoundation\MediaFoundationAttributes.cs" />
     <Compile Include="MediaFoundation\MediaFoundationCore.cs" />
     <Compile Include="MediaFoundation\MediaFoundationDecoder.cs" />
+    <Compile Include="MediaFoundation\MediaFoundationEncoder.cs" />
     <Compile Include="MediaFoundation\MFActivate.cs" />
     <Compile Include="MediaFoundation\MFInterops.cs" />
     <Compile Include="MediaFoundation\MFMediaSourceCharacteristics.cs" />
+    <Compile Include="MediaFoundation\MFMediaTypes.cs" />
+    <Compile Include="MediaFoundation\MFSinkWriter.cs" />
+    <Compile Include="MediaFoundation\MFSinkWriterStatistics.cs" />
     <Compile Include="MediaFoundation\MFSourceReaderFlag.cs" />
     <Compile Include="MediaFoundation\MFTCategories.cs" />
     <Compile Include="MediaFoundation\MFTEnumFlags.cs" />
     <Compile Include="MediaFoundation\MFTRegisterTypeInfo.cs" />
+    <Compile Include="MediaFoundation\TranscodeContainerTypes.cs" />
     <Compile Include="SoundIn\ISoundRecorder.cs" />
     <Compile Include="SoundIn\RecordingState.cs" />
     <Compile Include="SoundIn\WasapiCapture.cs" />
     <Compile Include="SoundIn\WasapiLoopbackCapture.cs" />
+    <Compile Include="SoundOut\DirectSoundOut.cs" />
     <Compile Include="SoundOut\DirectSound\DirectSoundDeviceEnumerator.cs" />
-    <Compile Include="SoundOut\DirectSound\DirectSoundNotifyManager1.cs" />
     <Compile Include="SoundOut\DirectSound\DSBufferFlags.cs" />
     <Compile Include="SoundOut\DirectSound\DSUtils.cs" />
     <Compile Include="SoundOut\MMInterop\WaveCapsFormats.cs" />
     <Compile Include="SoundOut\MMInterop\WaveCapsSupported.cs" />
+    <Compile Include="SoundOut\WasapiOut.cs" />
     <Compile Include="Streams\WriteableBufferingSource.cs" />
     <Compile Include="Streams\BufferSource.cs" />
     <Compile Include="Streams\EqFilter.cs" />
@@ -276,7 +284,6 @@
     <Compile Include="Win32\Win32ComException.cs" />
     <None Include="Codecs\VORBIS\Packet.cs" />
     <None Include="Codecs\VORBIS\IdentificationPacket.cs" />
-    <None Include="Codecs\VORBIS\SetupHeader.cs" />
     <None Include="Codecs\VORBIS\VorbisException.cs" />
     <Compile Include="Codecs\RAW\RawDataReader.cs" />
     <Compile Include="CoreAudioAPI\AudioEndpointVolume.cs" />
@@ -319,8 +326,6 @@
     <Compile Include="MediaFoundation\MFWaveFormatExConvertFlags.cs" />
     <Compile Include="SoundIn\WaveInEvent.cs" />
     <Compile Include="SoundIn\WaveInWindow.cs" />
-    <Compile Include="SoundOut\DirectSoundOut.cs" />
-    <Compile Include="SoundOut\WasapiOut.cs" />
     <Compile Include="Streams\AutoGain.cs" />
     <Compile Include="Streams\BlockReadEventArgs.cs" />
     <Compile Include="Streams\Effects\Echo.cs" />
@@ -361,7 +366,7 @@
     <None Include="Codecs\OGG\OggException.cs" />
     <None Include="Codecs\OGG\OggPacket.cs" />
     <None Include="Codecs\OGG\OggPacketReader.cs" />
-    <None Include="Codecs\OGG\OggPageFlags.cs" />
+    <None Include="Codecs\OGG\OggPageType.cs" />
     <None Include="Codecs\OGG\OggPageHeader.cs" />
     <None Include="Codecs\OGG\OggReader.cs" />
     <Compile Include="Codecs\WAV\DataChunk.cs" />
@@ -443,14 +448,13 @@
     <Compile Include="Streams\SampleConverter\SampleToWaveBase.cs" />
     <Compile Include="Streams\StereoToMonoSource.cs" />
     <Compile Include="SampleSourceBase.cs" />
-    <Compile Include="SoundOut\DirectSoundOutExtended.cs" />
+    <None Include="SoundOut\DirectSoundOutExtended.cs" />
     <Compile Include="SoundOut\DirectSound\3D\D3DVector.cs" />
     <Compile Include="SoundOut\DirectSound\3D\DS3DApplyMode.cs" />
     <Compile Include="SoundOut\DirectSound\3D\DSBuffer3DSettings.cs" />
     <Compile Include="SoundOut\DirectSound\3D\DSMode3D.cs" />
     <Compile Include="SoundOut\DirectSound\3D\DirectSoundBuffer3D.cs" />
     <Compile Include="SoundOut\DirectSound\DirectSoundNotify.cs" />
-    <None Include="SoundOut\DirectSound\DirectSoundNotifyManager.cs" />
     <Compile Include="SoundOut\DirectSound\DSBPositionNotify.cs" />
     <Compile Include="SoundOut\DirectSound\DSCapabilitiesFlags.cs" />
     <Compile Include="SoundOut\DirectSound\NativeMethods.cs" />
