--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -235,10 +235,23 @@
     <Compile Include="CoreAudioAPI\AudioCaptureClient.cs" />
     <Compile Include="CoreAudioAPI\AudioClientStreamFlags.cs" />
     <Compile Include="CoreAudioAPI\AudioMeterInformation.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionControl2.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionDisconnectReason.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionEnumerator.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionEvents.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionManager.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionManager2.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionNotification.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionState.cs" />
+    <Compile Include="CoreAudioAPI\AudioVolumeDuckNotification.cs" />
     <Compile Include="CoreAudioAPI\DefaultDeviceChangedEventArgs.cs" />
     <Compile Include="CoreAudioAPI\DeviceNotificationEventArgs.cs" />
     <Compile Include="CoreAudioAPI\DevicePropertyChangedEventArgs.cs" />
     <Compile Include="CoreAudioAPI\DeviceStateEventArgs.cs" />
+    <Compile Include="CoreAudioAPI\AudioSessionControl.cs" />
+    <Compile Include="CoreAudioAPI\IAudioSessionEvents.cs" />
+    <Compile Include="CoreAudioAPI\IAudioSessionNotification.cs" />
+    <Compile Include="CoreAudioAPI\IAudioVolumeDuckNotification.cs" />
     <Compile Include="CoreAudioAPI\IMMNotificationClient.cs" />
     <Compile Include="DMO\MP3DecMediaObject.cs" />
     <Compile Include="DSP\BiQuad.cs" />
