ID3 PictureFrame Bugfix for ID3v2.2.0

--- a/CSCore.Test/CSCore.Test.csproj
+++ b/CSCore.Test/CSCore.Test.csproj
@@ -200,6 +200,7 @@
     <Compile Include="MediaFoundation\BasicMediaFoundationTests.cs" />
     <Compile Include="ACM\AcmDriverTests.cs" />
     <Compile Include="MediaFoundation\MediafoundationEncoderTests.cs" />
+    <Compile Include="SoundIn\SoundInBehaviourTests.cs" />
     <Compile Include="SoundOut\SoundOutBehaviourTest.cs" />
     <Compile Include="Streams\BufferSourceTest.cs" />
     <Compile Include="Utils\BitReaderTests.cs" />
