--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -563,7 +563,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>call "$(SolutionDir)Tools\CSCli\$(OutDir)CSCli.exe" "$(TargetPath)"</PostBuildEvent>
+    <PostBuildEvent>call "$(SolutionDir)Tools\CSCli\$(OutDir)CSCli.exe" -file:"$(TargetPath)" -r:"RemoveObjAttribute" -c:"CSCalliAttribute"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
