--- a/CSCore.Test/CSCore.Test.csproj
+++ b/CSCore.Test/CSCore.Test.csproj
@@ -197,6 +197,7 @@
     <Compile Include="CoreAudioAPI\Utils.cs" />
     <Compile Include="CoreAudioAPI\EndpointTests.cs" />
     <Compile Include="CoreAudioAPI\MMDevicesTests.cs" />
+    <Compile Include="DMO\DmoEnumeratorTests.cs" />
     <Compile Include="MediaFoundation\BasicMediaFoundationTests.cs" />
     <Compile Include="ACM\AcmDriverTests.cs" />
     <Compile Include="MediaFoundation\MediafoundationEncoderTests.cs" />
